infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vokg
  labels:
    name: vokg
    environment: production
